# ClawVault

./: .gitignore  CHANGELOG.md  LOG.md  QUICKSTART.md  QUICKSTART.zh-CN.md  README copy.md  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml
doc/: GUARD_MODE.md  INSTALL_DEV.md  INSTALL_PRODUCTION.md  OPENCLAW_INTEGRATION.md  OPENCLAW_SKILL.md  README.md  architecture.md  scenes.md
doc/zh/: GENERATIVE_RULES.md  GENERATIVE_RULES_QUICKSTART.md  GUARD_MODE.md  INSTALL_DEV.md  INSTALL_PRODUCTION.md  OPENCLAW_INTEGRATION.md  OPENCLAW_SKILL.md  README.md  TEST_CASES_RULES.md  architecture.md  scenarios.md
scripts/: deploy.sh  setup.sh  start.sh  stop.sh  test.sh  uninstall.sh
scripts/examples/: README.md  openclaw-skill-generate-rule.py
skills/tophant-clawvault/: README.md  SECURITY.md  SKILL.md  clawvault_manager.py  skill.json
src/claw_vault/: __init__.py  __main__.py  cli.py  config.py
src/claw_vault/audit/: __init__.py  models.py  store.py
src/claw_vault/dashboard/: __init__.py  api.py  app.py
src/claw_vault/dashboard/static/: index.html
src/claw_vault/detector/: __init__.py  command.py  engine.py  injection.py  patterns.py  sensitive.py
src/claw_vault/guard/: __init__.py  action.py  rule_engine.py  rule_generator.py  rules_store.py
src/claw_vault/monitor/: __init__.py  budget.py  token_counter.py
src/claw_vault/proxy/: __init__.py  interceptor.py  server.py
src/claw_vault/sanitizer/: __init__.py  replacer.py  restorer.py
src/claw_vault/skills/: __init__.py  base.py  clawvault_installer.py  prompt_firewall.py  registry.py  sanitize_restore.py  security_report.py  security_scan.py  skill_audit.py  vault_guard.py
src/claw_vault/vault/: __init__.py  crypto.py  file_manager.py
tests/: conftest.py  test_guard.py  test_monitor.py  test_sanitizer.py
tests/test_detector/: test_command.py  test_injection.py  test_sensitive.py
tests/test_skills/: test_prompt_firewall.py  test_registry.py  test_sanitize_restore.py  test_vault_guard.py
